# Project_EpM

root/: CMakeLists.txt
root/src/: CMakeLists.txt  main.cpp
root/src/core/: CMakeLists.txt
root/src/core/rawfeatures/: CMakeLists.txt  FeatureDescriptor.cpp  FeatureDescriptor.h  FeaturesDetect.cpp  FeaturesDetect.h  FeaturesTools.cpp  FeaturesTools.h  FeaturesTools_test.cpp
root/test/: CMakeLists.txt  FeatureDescriptor_test.cpp  FeaturesDetect_test.cpp
root/test/codeexample/: code1Example.cpp
root/test/tools/: CMakeLists.txt  TestTools.cpp  TestTools.h
